# arbtr_2025

./: .gitignore  CMakeLists.txt  Dockerfile  README.md  config.yaml  docker-compose.yml  requirements.txt
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: cpp-ci.yml  python-ci.yml
config/: example.env
docs/: architecture.md
src/cpp/: arbitrage.cpp  arbitrage.h  bindings.cpp
